# furry-octo-tribble

./: pyproject.toml
.github/workflows/: py.yml
src/: __init__.py
src/domain/: stock.py  trade.py
src/repository/: trade_recording_repository.py
src/service/: all_share_index_service.py  trade_recording_service.py  volume_weighted_price_service.py
tests/: __init__.py  conftest.py  test_calculate_dividend_yield.py  test_calculate_pe_ratio.py
tests/domain/: test_calculate_dividend_yield.py  test_calculate_pe_ratio.py
tests/repository/: test_trade_recording_repository.py
tests/service/: test_all_share_index_service.py  test_calculate_volume_weighted_price.py  test_trade_recording_service.py
