[tool.poetry]
name = "furry-octo-tribble"
version = "0.1.0"
description = ""
authors = ["Mani Shirvani <mani.shirvani@sky.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
